<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cod.ru.centre.MainActivity">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:layout_above="@+id/button2"
        android:background="@drawable/background"
        android:layout_alignParentTop="true">

    </ImageView>

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/progressBar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickVideo"
        android:text="@string/video"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickPhoto"
        android:text="@string/photo"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSend"
        android:text="@string/send"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/progressBar"
        android:layout_above="@+id/button"
        android:indeterminateDrawable="@drawable/spinner_ring"
        android:layout_centerHorizontal="true" />

    <AutoCompleteTextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionGo"
        android:id="@+id/autocomplete_message"
        android:inputType="text"
        android:maxLength="70"
        android:hint="Подпишите фото"
        android:layout_alignBaseline="@+id/autocomplete_message1"
        android:layout_alignBottom="@+id/autocomplete_message1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <AutoCompleteTextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionGo"
        android:id="@+id/autocomplete_message1"
        android:inputType="text"
        android:maxLength="70"
        android:hint="Подпишите видео"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
